[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/turrets/turret_gun.png" type="Texture" id=1]
[ext_resource path="res://Screens/AnimationPlayer/TurretAnimationQueue/Turret.gd" type="Script" id=2]
[ext_resource path="res://common/enemy/flameE_red.png" type="Texture" id=3]
[ext_resource path="res://Screens/AnimationPlayer/TurretAnimationQueue/BulletLauncher.tscn" type="PackedScene" id=4]
[ext_resource path="res://common/turrets/turret_ballLauncher.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "burst"
length = 0.8
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "cooldown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.345098, 0.345098, 0.345098, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 0.66, 1, 1, 0.66, 1 ),
"update": 0,
"values": [ 0.0, -45.0, 0.0, 45.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "shoot"
} ]
}

[node name="Turret" type="Node2D"]
position = Vector2( 960, 540 )
script = ExtResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Gun" type="Sprite" parent="Pivot"]
position = Vector2( 45.306, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="AnimationShoot" type="AnimationPlayer" parent="Pivot/Gun"]
anims/shoot = SubResource( 1 )

[node name="fire" type="Sprite" parent="Pivot/Gun"]
position = Vector2( 0, -32 )
rotation = 3.14159
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )
offset = Vector2( 0, 44 )

[node name="BulletLauncher" parent="Pivot/Gun" instance=ExtResource( 4 )]
position = Vector2( -0.00012207, -31.1478 )

[node name="Sprite" type="Sprite" parent="Pivot"]
rotation = 1.57079
texture = ExtResource( 5 )

[node name="AnimationPattern" type="AnimationPlayer" parent="Pivot"]
anims/burst = SubResource( 2 )
anims/cooldown = SubResource( 3 )
anims/spray = SubResource( 4 )
